Edited Card module for responsive design. Added fixed height to profile picture, so text is not shifted before load

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -149,4 +149,8 @@
   .left {
     display: none;
   }
+
+  .right {
+    width: 100%;
+  }
 }
