--- a/src/pages/Homepage/Homepage.module.css
+++ b/src/pages/Homepage/Homepage.module.css
@@ -36,6 +36,7 @@
 
 .presentation img {
   width: 200px;
+  height: 200px;
   border-radius: 50%;
 }
 
